fix(css): styling fixes for screenshot arrows
We need this because the screenshots now overlap the images again.
Without, the buttons are transparent, which looks bad.

--- a/data/styles/arrow.css
+++ b/data/styles/arrow.css
@@ -16,26 +16,21 @@
  */
 
 .arrow {
-    background: @base_color;
-    box-shadow:
-        inset 0 0 0 1px alpha (@bg_highlight_color, 0.05),
-        inset 0 1px 0 0 alpha (@bg_highlight_color, 0.45),
-        inset 0 -1px 0 0 alpha (@bg_highlight_color, 0.15),
-        0 0 0 1px alpha (#000, 0.05),
-        0 1px 3px rgba(0,0,0,0.12),
-        0 1px 2px rgba(0,0,0,0.24);
+    background: radial-gradient(alpha(@theme_bg_color, 0.65) 0, alpha(@theme_bg_color, 0.65) 25%, rgba(255,255,255,0) 40%);
+    box-shadow: none;
     margin: 6px;
-    padding: 6px;
+    padding: 12px;
     color: @text_color;
+    transition: opacity 250ms ease-in-out;
+    transition: background 250ms ease-in-out;
+    outline-offset: -9px;
+
 }
 
-.arrow:active,
+.arrow:active:hover:focus {
+    border: none;
+}
+
 .arrow:disabled {
-    background-color: @insensitive_bg_color;
-    box-shadow:
-        inset 0 0 0 1px alpha (@bg_highlight_color, 0.05),
-        inset 0 1px 0 0 alpha (@bg_highlight_color, 0.45),
-        inset 0 -1px 0 0 alpha (@bg_highlight_color, 0.15),
-        0 0 0 1px alpha (#000, 0.05),
-        0 1px 2px alpha (#000, 0.22);
+    opacity: 0.33;
 }
